# MetroAI

docs/: _config.yml  team.md  (+4 more)
metro_agent/: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  pyproject.toml
metro_agent/scripts/: debug_station.py  smoke_eval.py
metro_agent/src/: color.py  config.py  console.py  eval_ppo.py  main.py  passengers_mediator.py  reactor.py  rl_env.py  smoke_eval.py  train_ppo.py  travel_plan.py  utils.py  visualization.py
metro_agent/src/dev/: path_editing.py
metro_agent/src/engine/: debug_renderer.py  engine.py  game_components.py  game_renderer.py  passenger_creator.py  passenger_mover.py  passenger_spawner.py  path_color_manager.py  path_finder.py  path_manager.py  status.py  travel_plan_finder.py
metro_agent/src/entity/: __init__.py  entity.py  get_entity.py  holder.py  ids.py  metro.py  passenger.py  station.py  travel_step.py
metro_agent/src/event/: convert.py  event.py  keyboard.py  mouse.py
metro_agent/src/geometry/: circle.py  line.py  point.py  shape.py  types.py  utils.py
metro_agent/src/graph/: graph_algo.py  node.py  skip_intermediate.py
metro_agent/src/gui/: button.py  gui.py  path_button.py
metro_agent/src/protocols/: passenger_mediator.py  travel_plan.py
metro_agent/src/tools/: setup_logging.py  trace_config.py  trace_runtime.py  trace_script.py
metro_agent/test/: base_test.py  legacy_access.py  random_seed_config.py  test_engine.py  test_entity.py  test_gameplay.py  test_geometry_advanced.py  test_geometry_basics.py  test_graph.py  test_location.py  test_mediators.py  test_path.py  test_station.py
(+88 files in other folders)
