[tool.poetry]
name = "python-mini-metro-extended"
version = "0.1.0"
description = "Fork of python_mini_metro."
authors = ["gulliver-madrid <49131885+gulliver-madrid@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "==1.24.2"
pygame = "==2.3.0"
shapely = "==2.0.1"
shortuuid = "==1.0.11"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
isort = "^5.13.2"
black = "^24.4.2"
coverage = "^7.5.4"
unittest-prettify = "^1.0.post4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
